--- a/public/form-styles.css
+++ b/public/form-styles.css
@@ -179,11 +179,12 @@
 }
 
 .checkbox-text {
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+    color: white;
+    
 }
 
 .terms-link {
-    color: rgba(255, 255, 255, 0.9);
+    color: #0098ff;
     text-decoration: underline;
     transition: color 0.3s ease;
 }
